LIN-3946/LIN-3979 Clean up Apt module
Change-Id: I0ff9d387641a56107844cca824ff6c4b4863d587