@@ -1,10 +1,62 @@
+/*
+ * Copyright Faktor Zehn GmbH.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ */
+
 package org.linkki.tooling.apt.compiler;
 
-import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toSet;
+import org.apache.commons.io.FileUtils;
+import org.linkki.core.defaults.ui.aspects.annotations.BindTooltip;
+import org.linkki.core.ui.aspects.annotation.BindAutoFocus;
+import org.linkki.core.ui.aspects.annotation.BindCaption;
+import org.linkki.core.ui.aspects.annotation.BindComboBoxDynamicItemCaption;
+import org.linkki.core.ui.aspects.annotation.BindComboBoxItemStyle;
+import org.linkki.core.ui.aspects.annotation.BindIcon;
+import org.linkki.core.ui.aspects.annotation.BindLabel;
+import org.linkki.core.ui.aspects.annotation.BindPlaceholder;
+import org.linkki.core.ui.aspects.annotation.BindReadOnly;
+import org.linkki.core.ui.aspects.annotation.BindReadOnlyBehavior;
+import org.linkki.core.ui.aspects.annotation.BindSlot;
+import org.linkki.core.ui.aspects.annotation.BindStyleNames;
+import org.linkki.core.ui.aspects.annotation.BindSuffix;
+import org.linkki.core.ui.aspects.annotation.BindVariantNames;
+import org.linkki.core.ui.aspects.annotation.BindVisible;
+import org.linkki.core.ui.element.annotation.UIButton;
+import org.linkki.core.ui.element.annotation.UICheckBox;
+import org.linkki.core.ui.element.annotation.UICheckboxes;
+import org.linkki.core.ui.element.annotation.UIComboBox;
+import org.linkki.core.ui.element.annotation.UICustomField;
+import org.linkki.core.ui.element.annotation.UIDateField;
+import org.linkki.core.ui.element.annotation.UIDateTimeField;
+import org.linkki.core.ui.element.annotation.UIDoubleField;
+import org.linkki.core.ui.element.annotation.UIIntegerField;
+import org.linkki.core.ui.element.annotation.UILabel;
+import org.linkki.core.ui.element.annotation.UILink;
+import org.linkki.core.ui.element.annotation.UILongField;
+import org.linkki.core.ui.element.annotation.UIMultiSelect;
+import org.linkki.core.ui.element.annotation.UIRadioButtons;
+import org.linkki.core.ui.element.annotation.UITableComponent;
+import org.linkki.core.ui.element.annotation.UITextArea;
+import org.linkki.core.ui.element.annotation.UITextField;
+import org.linkki.core.ui.element.annotation.UITimeField;
+import org.linkki.core.ui.table.column.annotation.UITableColumn;
+import org.linkki.tooling.apt.processor.LinkkiAnnotationProcessor;
 
+import javax.annotation.processing.Processor;
+import javax.tools.JavaCompiler;
+import javax.tools.JavaCompiler.CompilationTask;
+import javax.tools.JavaFileObject;
+import javax.tools.StandardJavaFileManager;
+import javax.tools.ToolProvider;
 import java.io.File;
 import java.io.IOException;
 import java.io.Writer;
@@ -18,30 +70,18 @@ import java.util.Map;
 import java.util.function.BiFunction;
 import java.util.stream.Stream;
 
-import javax.annotation.processing.Processor;
-import javax.tools.JavaCompiler;
-import javax.tools.JavaCompiler.CompilationTask;
-import javax.tools.JavaFileObject;
-import javax.tools.StandardJavaFileManager;
-import javax.tools.ToolProvider;
+import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toSet;
 
-import org.apache.commons.io.FileUtils;
-import org.linkki.core.defaults.ui.aspects.annotations.BindTooltip;
-import org.linkki.core.ui.aspects.annotation.BindReadOnly;
-import org.linkki.core.ui.aspects.annotation.BindVisible;
-import org.linkki.core.ui.element.annotation.UIButton;
-import org.linkki.core.ui.element.annotation.UICheckBox;
-import org.linkki.core.ui.element.annotation.UIComboBox;
-import org.linkki.core.ui.element.annotation.UIDateField;
-import org.linkki.core.ui.element.annotation.UIDateTimeField;
-import org.linkki.core.ui.element.annotation.UIDoubleField;
-import org.linkki.core.ui.element.annotation.UIIntegerField;
-import org.linkki.core.ui.element.annotation.UILabel;
-import org.linkki.core.ui.element.annotation.UITextArea;
-import org.linkki.core.ui.element.annotation.UITextField;
-import org.linkki.core.ui.table.column.annotation.UITableColumn;
-import org.linkki.tooling.apt.processor.LinkkiAnnotationProcessor;
-
+/**
+ * A class for compiling and testing Java source files with annotation processors.
+ * This class sets up a temporary compilation environment, manages classpaths, and provides
+ * methods to compile source files using specified annotation processors.
+ * <p>
+ * The TestCompiler is particularly useful for testing the linkki annotation processor and related UI component annotations.
+ * </p>
+ */
 public class TestCompiler {
     private static final BiFunction<String, String, String> ANNOTATION_OPTION = (option, value) -> "-A" + option + '='
             + value;
@@ -56,6 +96,11 @@ public class TestCompiler {
 
     private Writer logWriter;
 
+    /**
+     * Constructs a new TestCompiler, setting up directories and default compiler options.
+     *
+     * @throws IOException if there's an error creating directories
+     */
     public TestCompiler() throws IOException {
         addClassPathsOf(asList(TestCompiler.class, LinkkiAnnotationProcessor.class));
         addClassPathsOf(classOfUIComponents());
@@ -64,15 +109,24 @@ public class TestCompiler {
         this.outputDir = createTempDir("outputDir");
 
         compilerOptions = new ArrayList<>(asList(
-                                                 "-cp", buildClassPath(),
-                                                 "-d", outputDir.getAbsolutePath()));
+                "-cp", buildClassPath(),
+                "-d", outputDir.getAbsolutePath()));
         this.annotationProcessorOptions = new HashMap<>();
     }
 
+    /**
+     * Adds the output directory to the annotation processor classpath.
+     */
     public void addOutputToAptClasspath() {
         annotationProcessorOptions.put("classpath", outputDir.getAbsolutePath());
     }
 
+    /**
+     * Adds a linkki-specific option for the annotation processor.
+     *
+     * @param option the option name
+     * @param value  the option value
+     */
     public void addLinkkiAnnotationProcessorOption(String option, String value) {
         this.annotationProcessorOptions.put(LinkkiAnnotationProcessor.LINKKI_OPTION_PREFIX + '.' + option, value);
     }
@@ -81,6 +135,9 @@ public class TestCompiler {
         this.logWriter = logWriter;
     }
 
+    /**
+     * Cleans up directories created by this compiler.
+     */
     public void cleanUp() {
         FileUtils.deleteQuietly(sourceDir);
         FileUtils.deleteQuietly(outputDir);
@@ -104,7 +161,7 @@ public class TestCompiler {
     private List<String> createOptions() {
         List<String> formattedLinkkiOptions = annotationProcessorOptions.entrySet().stream()
                 .map(entry -> ANNOTATION_OPTION.apply(entry.getKey(), entry.getValue()))
-                .collect(toList());
+                .toList();
 
         return Stream.concat(compilerOptions.stream(), formattedLinkkiOptions.stream()).collect(toList());
     }
@@ -113,7 +170,7 @@ public class TestCompiler {
             throws IOException {
         List<File> files = sourceFiles.stream()
                 .map(this::writeSourceFile)
-                .collect(toList());
+                .toList();
 
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         try (StandardJavaFileManager fileManager = compiler.getStandardFileManager(null, null, null)) {
@@ -123,16 +180,26 @@ public class TestCompiler {
             CompilationTask compilationTask = compiler.getTask(logWriter, null, null, options, null, javaFileObjects);
 
             if (processor != null) {
-                compilationTask.setProcessors(asList(processor));
+                compilationTask.setProcessors(List.of(processor));
             }
             return compilationTask.call();
         }
     }
 
+    /**
+     * Adds the classpath of the specified class to the compiler's classpath.
+     *
+     * @param clazz the class whose classpath should be added
+     */
     public void addClassPathOf(Class<?> clazz) {
         classPathEntries.add(classPathOf(clazz));
     }
 
+    /**
+     * Adds the classpaths of the specified classes to the compiler's classpath.
+     *
+     * @param classes the classes whose classpaths should be added
+     */
     public void addClassPathsOf(Collection<Class<?>> classes) {
         classPathEntries.addAll(classes.stream().map(TestCompiler::classPathOf).collect(toSet()));
     }
@@ -141,7 +208,7 @@ public class TestCompiler {
         ArrayList<String> classPathElements = new ArrayList<>(classPathEntries);
 
         classPathElements.add(outputDir.getAbsolutePath());
-        return classPathElements.stream().collect(joining(System.getProperty("path.separator")));
+        return String.join(File.pathSeparator, classPathElements);
     }
 
     private File createTempDir(String prefix) throws IOException {
@@ -177,21 +244,40 @@ public class TestCompiler {
 
     private static Collection<Class<?>> classOfUIComponents() {
         return asList(
-                      UIButton.class,
-                      UICheckBox.class,
-                      UIComboBox.class,
-                      UIDateField.class,
-                      UIDateTimeField.class,
-                      UIDoubleField.class,
-                      UIIntegerField.class,
-                      UILabel.class,
-                      UITableColumn.class,
-                      UITextArea.class,
-                      UITextField.class,
-                      BindTooltip.class,
-                      BindReadOnly.class,
-                      BindVisible.class,
-                      UITableColumn.class);
+                UIButton.class,
+                UICheckBox.class,
+                UICheckboxes.class,
+                UIComboBox.class,
+                UICustomField.class,
+                UIDateField.class,
+                UIDateTimeField.class,
+                UIDoubleField.class,
+                UIIntegerField.class,
+                UILabel.class,
+                UILink.class,
+                UILongField.class,
+                UIMultiSelect.class,
+                UIRadioButtons.class,
+                UITableComponent.class,
+                UITableColumn.class,
+                UITextArea.class,
+                UITextField.class,
+                UITimeField.class,
+                BindTooltip.class,
+                BindAutoFocus.class,
+                BindCaption.class,
+                BindComboBoxDynamicItemCaption.class,
+                BindComboBoxItemStyle.class,
+                BindIcon.class,
+                BindLabel.class,
+                BindPlaceholder.class,
+                BindReadOnly.class,
+                BindReadOnlyBehavior.class,
+                BindSlot.class,
+                BindStyleNames.class,
+                BindSuffix.class,
+                BindVariantNames.class,
+                BindVisible.class);
     }
 
 }
